# YNAB-receipt-analyzer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  EXECUTED_PRIORITY0_2026-02-18.md  EXECUTED_PRIORITY1_TO_4_2026-02-18.md  LICENSE  Makefile  README.md  backup_ynab_budget.sh  docker-compose.yml  main.py  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json
backend/: README.md  alembic.ini  requirements.txt
config/: ai_limits.v1.json
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: accounting_invariants.md  agent_loop_state.md  ai-pricing-sources.md  ai-usage-limiter.md  architecture.md  feature_inventory.md  nas-deploy.md  pi-edge-setup.md  test_plan.md  troubleshooting.md  ui_product_direction.md  ynab_safety_model.md
edge/pi-outbox-shipper/: README.md  pyproject.toml
edge/pi-outbox-shipper/config/: shipper.example.yaml
edge/pi-outbox-shipper/scripts/: install_systemd.sh
edge/pi-outbox-shipper/shipper/: __init__.py  config.py  logging.py  main.py  sender.py  state.py  watcher.py
edge/pi-outbox-shipper/systemd/: receipt-shipper.service
edge/pi-outbox-shipper/tests/: test_shipper_edge_cases.py  test_state.py  test_watcher.py
frontend/: next.config.ts  package-lock.json  package.json
githooks/: pre-commit
plans/: implementation-progress-receipt-digital-twin-2026-02-27-v2.md
scripts/: debug-tools.sh  dev-down.sh  dev-env.sh  dev-up.sh  game-debug.sh  hot-reload.sh  install_git_hooks.sh  link_devtools.sh  reset-dev-data.sh  sync-frontend-standalone-assets.sh  (+1 more)
worker/: README.md  (+2 more)
(+256 files in other folders)
